feat: revoke customer portal sessions
